fix(web): hide admin bar shortcuts on small screens

--- a/public/common/css/biblys-admin.css
+++ b/public/common/css/biblys-admin.css
@@ -202,6 +202,10 @@ table.checkable tbody tr {
   height: 32px;
 }
 
+.admin-bar-shortcuts {
+  display: none;
+}
+
 .admin-bar-shortcut {
   color: white;
   display: inline-block;
@@ -237,5 +241,9 @@ table.checkable tbody tr {
 @media (min-width: 768px) {
   .admin-bar {
     max-width: none;
+  }
+
+  .admin-bar-shortcuts {
+    display: inline;
   }
 }
